Fix blurry generated images

--- a/src/less/_media.less
+++ b/src/less/_media.less
@@ -14,6 +14,8 @@
         &.page-3 > #content button {
             margin: 0 .5rem 1rem;
         }
+
+        p { text-align: center; }
     }
     #content {
         width: 100%;
